python/testData/inspections/PyCompatibilityInspection/importStatement.py
<error descr="Python version 2.7 does not have module builtins">import builtins</error>

<warning descr="Python versions 3.7, 3.8, 3.9, 3.10, 3.11, 3.12, 3.13, 3.14 do not have module __builtin__">import __builtin__</warning>